@@ -1,3 +1,9 @@
+2001-05-15  Bruno Haible  <haible@clisp.cons.org>
+
+	* progname.h (set_program_name): New declaration.
+	* progname.c: Include <string.h>.
+	(set_program_name): New function.
+
 2001-05-02  Bruno Haible  <haible@clisp.cons.org>
 
 	* xerror.h: New file.
